6-deployment-externalip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
spec:
  selector:
    matchLabels:
      app: test-node
  replicas: 1
  template:
    metadata:
      labels:
        app: test-node
    spec:
      containers:
      - name: test-node
        image: localhost:5000/test
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: test-node
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  externalIPs:
  - 192.168.65.4
