7-deployment-svc-without-selectors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
spec:
  selector:
    matchLabels:
      app: test-node
  replicas: 2
  template:
    metadata:
      labels:
        app: test-node
    spec:
      containers:
      - name: test-node
        image: localhost:5000/test
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: example-service
subsets:
- addresses:
  - ip: 10.1.0.149 # ip from pod 1
  - ip: 10.1.0.150 # ip from pod 2
  ports:
  - port: 3000
