2-deployment-service-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
spec:
  selector:
    matchLabels:
      app: test-node
  replicas: 2
  template:
    metadata:
      labels:
        app: test-node
    spec:
      containers:
      - name: test-node
        image: localhost:5000/test
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: test-node-service
spec:
  selector:
    app: test-node
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-node-service
            port:
              number: 3000
